--- a/assets/html/sayhello.html
+++ b/assets/html/sayhello.html
@@ -61,27 +61,28 @@
                         <div class="section5-0-form-titre">
                             <div class="container">
                                 <div class="row">
-                                    <div class="col-lg-12">
+                                    <div class="col-lg-5">
                                         <h2>CONTACT US</h2>
-                                        <div class="row">
-                                            <div class="col-lg-6 left">
-                                                <h6>123-456-7890</h6>
-                                            </div>
-                                            <div class="col-lg-6 right">
-                                                <h6>info@my-domain.com</h6>
-                                            </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-lg-4">
+                                            <p>123-456-7890</p>
+                                        </div>
+                                        <div class="col-lg-1 section5-middle"></div>
+                                        <div class="col-lg-5">
+                                            <p>info@my-domain.com</p>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="row g-3">
-                            <div class="col">
+                            <div class="col form-top">
                                 <label for="form-control" class="form-label">Name</label>
                                 <input type="text" class="form-control" placeholder="Write your name here"
                                     aria-label="name">
                             </div>
-                            <div class="col">
+                            <div class="col form-top">
                                 <label for="form-control" class="form-label">Phone</label>
                                 <input type="text" class="form-control" placeholder="Write your phone here"
                                     aria-label="phone">
@@ -89,7 +90,8 @@
                         </div>
                         <div class="col-12 section5-0-email">
                             <label for="inputEmail4" class="form-label">Email</label>
-                            <input type="email" class="form-control" placeholder="Write your email here" id="inputEmail4">
+                            <input type="email" class="form-control" placeholder="Write your email here"
+                                id="inputEmail4">
                         </div>
                         <div class="col-12">
                             <label for="Message" class="form-label">Message</label>
@@ -98,6 +100,33 @@
                         </div>
                         <a href="#" class="btn">Order Today</a>
                     </form>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- =================================== SECTION 5-1 =================================== -->
+
+    <section class="section5-1">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-2">
+                    <img src="/assets/images/sayhello/section5-1/illustration-panier-oeufs.JPG"
+                        alt="illustration-panier-oeufs">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <h2>VISIT OUR FARM</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3">
+                    <p>500 Terry Francois Street <br> San Francisco, CA 94158</p>
+                </div>
+                <div class="col-lg-1 section5-middle"></div>
+                <div class="col-lg-3">
+                    <p>Mon - Fri: 7am - 5pm <br> Sat: 10am - 5pm</p>
                 </div>
             </div>
         </div>
