--- a/assets/html/shop-products.html
+++ b/assets/html/shop-products.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
     <!-- =================================== FONTS =================================== -->
 
@@ -33,15 +35,34 @@
     <nav>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-5 logo-nav">
+                <div class="col-sm-5 logo-nav">
                     <a href="/assets/html/index.html"><img src="/assets/images/navbar/logo-lewis-farm.JPG"
                             alt="Logo Lewis Farm"></a>
                 </div>
-                <div class="col-lg-7 menus-nav">
+                <div class="col-sm-6 menus-nav">
                     <a href="/assets/html/about-the-farm.html">ABOUT THE FARM</a>
                     <a href="/assets/html/shop-products.html">SHOP PRODUCTS</a>
                     <a href="/assets/html/faq.html">FAQ</a>
                     <a href="/assets/html/sayhello.html">SAY HELLO</a>
+                </div>
+                <div class="col-sm-1 offset-5 hamburger">
+                    <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"
+                        data-bs-target="#offcanvasTop" aria-controls="offcanvasTop">Menus</button>
+
+                    <div class="offcanvas offcanvas-top" tabindex="-1" id="offcanvasTop"
+                        aria-labelledby="offcanvasTopLabel">
+                        <div class="offcanvas-header">
+                            <h5 id="offcanvasTopLabel">Menus</h5>
+                            <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <a href="/assets/html/about-the-farm.html">ABOUT THE FARM</a>
+                            <a href="/assets/html/shop-products.html">SHOP PRODUCTS</a>
+                            <a href="/assets/html/faq.html">FAQ</a>
+                            <a href="/assets/html/sayhello.html">SAY HELLO</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -59,33 +80,30 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <img src="/assets/images/shop-products/boite-6oeufs.webp" alt="boite-6oeufs">
                             <p>6 Organic Eggs</p>
                             <p>$9.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <img src="/assets/images/shop-products/boite-12oeufs.webp" alt="boite-12oeufs">
                             <p>12 Organic Eggs</p>
                             <p>$19.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <img src="/assets/images/shop-products/boite-24oeufs.webp" alt="boite-24oeufs">
                             <p>24 Organic Eggs</p>
                             <p>$29.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-3"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-3"></div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <div class="section3-0-weight">Per Pound</div>
                             <img src="/assets/images/shop-products/poussin.webp" alt="poussin">
@@ -93,7 +111,7 @@
                             <p>$9.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <div class="section3-0-weight">Per Pound</div>
                             <img src="/assets/images/shop-products/poule-blanche.webp" alt="poule-blanche">
@@ -101,7 +119,7 @@
                             <p>$19.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-2">
+                    <div class="col-lg-4 section3-0-cont">
                         <div class="section3-0-content">
                             <div class="section3-0-weight">Per Pound</div>
                             <img src="/assets/images/shop-products/poule.webp" alt="poule">
@@ -109,7 +127,6 @@
                             <p>$29.99</p>
                         </div>
                     </div>
-                    <div class="col-lg-3"></div>
                 </div>
             </div>
         </div>
